fix: Incorrect card classname causing image overflow

--- a/src/styles/DevChamps.scss
+++ b/src/styles/DevChamps.scss
@@ -79,7 +79,6 @@
   font-size: 18px;
   letter-spacing: 0.15em;
   margin-top: 0;
-  margin-bottom: 10em;
   color: #dd2727;
   text-align: center;
 }
